--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "react-web-app",
-  "name": "react-web-app",
+  "short_name": "kasinoww",
+  "name": "kasinoww",
   "icons": [
     {
       "src": "favicon.ico",
